--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
     <jacoco.min.branchcoverage>0.28</jacoco.min.branchcoverage>
   </properties>
 
-  <parent>
+  <!--<parent>
     <groupId>com.azure</groupId>
     <artifactId>azure-client-sdk-parent</artifactId>
     <version>1.7.0</version> 
     <relativePath>../../parents/azure-client-sdk-parent</relativePath>
-  </parent>
+  </parent>-->
 
   <dependencies>
   <dependency>
