--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,16 @@
 
   <groupId>com.ptc</groupId>
   <artifactId>Fileserver</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure:azure-identity;current} -->
+  <packaging>war</packaging>
+  <version>1</version> <!-- {x-version-update;com.azure:azure-identity;current} -->
 
   <name>Fileserver</name>
   <description>This module contains client library for Fileserver.</description>
   <url>https://github.com/vinayak-kuchekar/FileServer</url>
 
   <properties>
-    <jacoco.min.branchcoverage>0.28</jacoco.min.branchcoverage>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <!--<parent>
@@ -58,6 +60,7 @@
 
   <build>
     <plugins>
+             
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
