--- a/.github/workflows/main_windchillfileserver.yml
+++ b/.github/workflows/main_windchillfileserver.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: Fileserver
+          name: java-app
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
