--- a/pom.xml
+++ b/pom.xml
@@ -36,26 +36,22 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
     </dependency>
-  <!--<dependency>
+   <dependency>
     <groupId>org.glassfish</groupId>
     <artifactId>javax.servlet</artifactId>
     <version>3.1.1</version>
    </dependency>
-    <dependency>
+   <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
       <version>2.17.2</version>
     </dependency>
     <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-security-keyvault-keys</artifactId>
-      <version>4.5.2</version>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-coyote</artifactId>
+      <version>10.1.7</version>
     </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-identity</artifactId>
-      <version>1.7.2</version>
-    </dependency> -->
+ 
   </dependencies>
 
   <build>
