--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
   </dependencies>
 
   <build>
-    <plugins>
-             
+    <finalName>${project.artifactId}</finalName>
+    <plugins>             
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
