--- a/.github/workflows/main_windchillfileserver.yml
+++ b/.github/workflows/main_windchillfileserver.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: Fileserver
+          name: app-name
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
@@ -41,7 +41,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: Fileserver
+          name: app-name
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
